# deepsort-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
benches/: tracker.rs
crates/deepsort-rs/: Cargo.toml
crates/deepsort-rs/benches/: tracker.rs
crates/deepsort-rs/src/: bounding_box.rs  detection.rs  iou_matching.rs  kalman_filter.rs  kuhn_munkres.rs  lib.rs  linear_assignment.rs  nn_matching.rs  track.rs  tracker.rs
crates/evaluation/: .gitignore  Cargo.toml  detect.sh  eval.sh  evaluate.sh  generate.sh  merge.sh  mot_evaluate.sh  summary.py
crates/evaluation/TrackEval/: minimum_requirements.txt  requirements.txt
crates/evaluation/deep_sort/: .gitignore  convert.py  convert.sh  convert_downloaded_det.py  deep_sort_app.py  evaluate.sh  evaluate_motchallenge.py  generate.sh
crates/evaluation/deep_sort/deep_sort/: linear_assignment.py
crates/evaluation/deep_sort/tools/: generate_detections.py
crates/evaluation/src/: main.rs
crates/evaluation/src/utils/: frame_processing.rs  image_resize.rs  mod.rs
src/: bounding_box.rs  detection.rs  iou_matching.rs  kalman_filter.rs  lib.rs  linear_assignment.rs  nn_matching.rs  track.rs  tracker.rs
