[package]
name = "deepsort-rs"
version = "0.1.0"
authors = ["Mike Seddon <seddonm1@gmail.com>"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
ndarray = { version = "0.15.4", features = ["blas"] }
ndarray-linalg = { version = "0.14.1", features = ["intel-mkl-static"] }
fixedbitset = "0.4.1"
num-traits = "0.2.15"

[patch.crates-io]
# this override is needed to force intel-mkl-src 0.7.0+mkl2020.1
lax = { path = "./vendor/lax" }

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
criterion = "0.3.5"
assert_approx_eq = "1.1.0"

[[bench]]
name = "tracker"
harness = false

[profile.bench]
debug = true