[package]
name = "deepsort-rs"
version = "0.1.0"
authors = ["Mike Seddon <seddonm1@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.70"
lazy_static = "1.4.0"
ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
fixedbitset = "0.4.2"
num-traits = "0.2.15"
uuid = { version = "1.3.1", features = ["v4"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = { version = "0.4.0", features =["html_reports"] }
fast_image_resize = "2.7.0"
glob = "0.3.1"
image = "0.24.6"
itertools = "0.10.5"
num_cpus = "1.15.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
rayon = "1.7.0"
tract-onnx = "0.19.15"

[[bench]]
name = "tracker"
harness = false

[profile.bench]
debug = true