[package]
name = "evaluation"
version = "0.1.0"
authors = ["Mike Seddon <seddonm1@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.2.1"
deepsort-rs = { path = "../deepsort-rs" }
fast_image_resize = "2.7.3"
fixedbitset = "0.4.2"
glob = "0.3.1"
image = "0.24.6"
imageproc = "0.23.0"
indexmap = "1.9.3"
ioutrack = { path = "../ioutrack" }
itertools = "0.10.5"
lazy_static = "1.4.0"
ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
npyz = { version = "0.8", features = ["derive", "complex", "npz", "arrayvec"] }
num_cpus = "1.15.0"
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
rayon = "1.7.0"
rusttype = "0.9.3"
serde = "1.0.162"
tract-onnx = "0.19.15"
uuid = { version = "1.3.2", features = ["v4"] }